--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
-pip freeze > requirements.txt
+certifi==2018.4.16
+chardet==3.0.4
+click==6.7
+dash==0.22.0
+dash-core-components==0.26.0
+dash-html-components==0.11.0
+dash-renderer==0.13.0
+decorator==4.3.0
+Flask==1.0.2
+Flask-Compress==1.4.0
+gunicorn==19.9.0
+idna==2.7
+ipython-genutils==0.2.0
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-core==4.4.0
+MarkupSafe==1.0
+nbformat==4.4.0
+nltk==3.3
+numpy==1.15.0
+pandas==0.23.3
+plotly==3.1.0
+python-dateutil==2.7.3
+pytz==2018.5
+requests==2.19.1
+retrying==1.3.3
+six==1.11.0
+textblob==0.15.1
+traitlets==4.3.2
+urllib3==1.23
+Werkzeug==0.14.1
